syntax = "proto3";

package auth;

option go_package = "github.com/OneKeyCoder/UIT-Go-Backend/proto/auth";

// AuthService provides authentication and authorization
service AuthService {
  // Authenticate validates user credentials and returns JWT tokens
  rpc Authenticate(AuthRequest) returns (AuthResponse);

  // ValidateToken validates a JWT token and returns user claims
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);

  // RefreshToken generates new tokens using a refresh token
  rpc RefreshToken(RefreshTokenRequest) returns (AuthResponse);
}

message AuthRequest {
  string email = 1;
  string password = 2;
}

message AuthResponse {
  bool success = 1;
  string message = 2;
  User user = 3;
  TokenPair tokens = 4;
}

message ValidateTokenRequest { string token = 1; }

message ValidateTokenResponse {
  bool valid = 1;
  int32 user_id = 2;
  string email = 3;
  string role = 4;
}

message RefreshTokenRequest { string refresh_token = 1; }

message User {
  int32 id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  int32 active = 5;
  string role = 6;
}

message TokenPair {
  string access_token = 1;
  string refresh_token = 2;
  int64 access_expires_at = 3;
  int64 refresh_expires_at = 4;
}
